* Linux:
  - packet offload counters supported in 6.7+ [Paul]
  - Add IPTFS support [Paul / Antony / Andrew]
  - 6.10+ need replay-window 0 on OUTBOUND SA [Paul]
  - Do not set nopmtudisc on inbound SA [Paul]
  - Set DSCP options only on the relevant direction SA [Paul]
* BSD:
  - implement ipsec-interface= on FreeBSD & OpenBSD [Andrew]
* whack/addconn:
  - fix "duplicated flag ctlsocket" regression in 5.0 #1840 [Andrew, Ilya Maximets #1840]
  - orders of magnitude speedup of 'ipsec add' w/ protoports= [Ilya Maximets #1987]
* building:
  - fix build with USE_LIBCURL=false [Hans de Graaff #1845, Andrew]
  - fix build on OpenBSD 7.6 [Andrew]
* testing:
  - update OpenBSD: 7.6; NetBSD: 10.1; FreeBSD: 14.2; Alpine: 3.21 [Andrew]
  - use pyca/cryptography when CSRs and PKCS12 files [Andrew #1990 #1996]

v5.1 (Oct 8, 2024)
* IKEv2:
  - fix race when initiator-responder cross rekey requests [Andrew]
  - don't ignore Delete IKE SA request while waiting for Delete IKE SA response [Andrew]
  - log arrival of first IKE_AUTH request that triggers DH [Andrew]
  - rate limit logging of packets with invalid payloads
* IKEv1:
  - fix Quick mode installing 0.0.0.0/0 when no MSG_CONFIG exchange [Andrew, Tuomo]
  - fix iOS Quick mode request needing to re-recover lease [Andrew, Tuomo]
  - fix regression where deleting ISAKMP deleted IPsec [Andrew, Tuomo]
  - add config options of ah=sha2{256,512} [Andrew]
  - add DH29,DH31 to default proposals [Andrew]
  - reject ESP AEAD combined with non-NULL integrity [Andrew]
* Crypto:
  - update IKE to use NSS's FIPS compliant PK11_AEADOp() [Andrew, Robert Relyea]
  - support ESP with CHACHA20POLY1305 on FreeBSD and OpenBSD [Andrew]
* IPsec Interface:
  - fix check for an existing IPsec Interface address (Linux) [Wolfgang]
  - add IPsec Interface address when connection establishes [Wolfgang]
  - fix adding IPv6 address to IPsec interface [Wolfgang]
  - delete Ipsec Interface address when connection unroutes [Wolfgang]